speedup of four times with zip using

--- a/quick_tests/quick_ebeMassPlot.ipynb
+++ b/quick_tests/quick_ebeMassPlot.ipynb
@@ -12,6 +12,13 @@
      "text": [
       "Gateway Client created\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-09 15:11:43,693 - distributed.client - ERROR - Failed to reconnect to scheduler after 30.00 seconds, closing client\n"
+     ]
     }
    ],
    "source": [
@@ -145,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9df420ff-4674-4a7a-96c9-c143e0bd8e2f",
    "metadata": {
     "scrolled": true
@@ -155,9 +162,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time elapsed in : 287.15665459632874\n",
-      "time elapsed in : 277.4677734375\n"
+      "time elapsed in : 76.4024121761322\n",
+      "time elapsed in : 72.85243368148804\n",
+      "time elapsed in : 71.72584366798401\n"
      ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 41\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;66;03m# mc_hist, _ = np.histogram(dimuon_mass.compute(), bins=binning, weights = weights.compute())\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28mzip\u001b[39m \u001b[38;5;241m=\u001b[39m ak\u001b[38;5;241m.\u001b[39mzip({\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdimuon_mass\u001b[39m\u001b[38;5;124m\"\u001b[39m : dimuon_mass,\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mweights\u001b[39m\u001b[38;5;124m\"\u001b[39m : weights,\n\u001b[1;32m     40\u001b[0m })\n\u001b[0;32m---> 41\u001b[0m \u001b[38;5;28mzip\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mzip\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     42\u001b[0m mc_hist, _ \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mhistogram(\u001b[38;5;28mzip\u001b[39m\u001b[38;5;241m.\u001b[39mdimuon_mass, bins\u001b[38;5;241m=\u001b[39mbinning, weights \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mzip\u001b[39m\u001b[38;5;241m.\u001b[39mweights)\n\u001b[1;32m     44\u001b[0m fig, ax_main \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots()\n",
+      "File \u001b[0;32m/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask/base.py:375\u001b[0m, in \u001b[0;36mDaskMethodsMixin.compute\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    351\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    352\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Compute this dask collection\u001b[39;00m\n\u001b[1;32m    353\u001b[0m \n\u001b[1;32m    354\u001b[0m \u001b[38;5;124;03m    This turns a lazy Dask collection into its in-memory equivalent.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    373\u001b[0m \u001b[38;5;124;03m    dask.compute\u001b[39;00m\n\u001b[1;32m    374\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 375\u001b[0m     (result,) \u001b[38;5;241m=\u001b[39m \u001b[43mcompute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtraverse\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    376\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "File \u001b[0;32m/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/dask/base.py:661\u001b[0m, in \u001b[0;36mcompute\u001b[0;34m(traverse, optimize_graph, scheduler, get, *args, **kwargs)\u001b[0m\n\u001b[1;32m    658\u001b[0m     postcomputes\u001b[38;5;241m.\u001b[39mappend(x\u001b[38;5;241m.\u001b[39m__dask_postcompute__())\n\u001b[1;32m    660\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m shorten_traceback():\n\u001b[0;32m--> 661\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[43mschedule\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdsk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeys\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    663\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m repack([f(r, \u001b[38;5;241m*\u001b[39ma) \u001b[38;5;28;01mfor\u001b[39;00m r, (f, a) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(results, postcomputes)])\n",
+      "File \u001b[0;32m/depot/cms/kernels/coffea2024/lib/python3.10/threading.py:607\u001b[0m, in \u001b[0;36mEvent.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    605\u001b[0m signaled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_flag\n\u001b[1;32m    606\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m signaled:\n\u001b[0;32m--> 607\u001b[0m     signaled \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_cond\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    608\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m signaled\n",
+      "File \u001b[0;32m/depot/cms/kernels/coffea2024/lib/python3.10/threading.py:324\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    322\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    323\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 324\u001b[0m         gotit \u001b[38;5;241m=\u001b[39m \u001b[43mwaiter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    325\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    326\u001b[0m         gotit \u001b[38;5;241m=\u001b[39m waiter\u001b[38;5;241m.\u001b[39macquire(\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x1000 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x1000 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x1000 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -178,13 +228,13 @@
     "    filter = (dimuon_mass!=-999.0) & (weights != 0)\n",
     "    dimuon_mass = dimuon_mass[filter]\n",
     "    weights = weights[filter]\n",
-    "    data_hist, _ = np.histogram(dimuon_mass.compute(), bins=binning, weights = weights.compute())\n",
-    "    # zip = ak.zip({\n",
-    "    #     \"dimuon_mass\" : dimuon_mass,\n",
-    "    #     \"weights\" : weights,\n",
-    "    # })\n",
-    "    # zip = zip.compute()\n",
-    "    # data_hist, _ = np.histogram(zip.dimuon_mass, bins=binning, weights = zip.weights)\n",
+    "    # data_hist, _ = np.histogram(dimuon_mass.compute(), bins=binning, weights = weights.compute())\n",
+    "    zip = ak.zip({\n",
+    "        \"dimuon_mass\" : dimuon_mass,\n",
+    "        \"weights\" : weights,\n",
+    "    })\n",
+    "    zip = zip.compute()\n",
+    "    data_hist, _ = np.histogram(zip.dimuon_mass, bins=binning, weights = zip.weights)\n",
     "    # MC ------------------------------------------------------------------------------------\n",
     "    cat_selection = mc_categories[idx]\n",
     "    # print(f\"cat_selection: {cat_selection.compute()}\")\n",
@@ -196,13 +246,13 @@
     "    filter = (dimuon_mass!=-999.0) & (weights != 0)\n",
     "    dimuon_mass = dimuon_mass[filter]\n",
     "    weights = weights[filter]\n",
-    "    mc_hist, _ = np.histogram(dimuon_mass.compute(), bins=binning, weights = weights.compute())\n",
-    "    # zip = ak.zip({\n",
-    "    #     \"dimuon_mass\" : dimuon_mass,\n",
-    "    #     \"weights\" : weights,\n",
-    "    # })\n",
-    "    # zip = zip.compute()\n",
-    "    # mc_hist, _ = np.histogram(zip.dimuon_mass, bins=binning, weights = zip.weights)\n",
+    "    # mc_hist, _ = np.histogram(dimuon_mass.compute(), bins=binning, weights = weights.compute())\n",
+    "    zip = ak.zip({\n",
+    "        \"dimuon_mass\" : dimuon_mass,\n",
+    "        \"weights\" : weights,\n",
+    "    })\n",
+    "    zip = zip.compute()\n",
+    "    mc_hist, _ = np.histogram(zip.dimuon_mass, bins=binning, weights = zip.weights)\n",
     "\n",
     "    fig, ax_main = plt.subplots()\n",
     "    hep.histplot(\n",
