nvm, the new PRNG method is the same. But this confirms low enough discrepancy for keepDim QGL and Btag to be used

--- a/quick_tests/quick_validation_comparison.ipynb
+++ b/quick_tests/quick_validation_comparison.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "76f00d86-2368-468a-8c84-0cbdba38aaae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 37279 instead\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dask_awkward as dak\n",
     "import awkward as ak\n",
@@ -35,7 +24,10 @@
     "# full_load_path = load_path+f\"/{sample}/0/*.parquet\"\n",
     "# full_load_path = f\"/depot/cms/users/yun79/results/stage1/test_full_QglAndBtagOff/2018/f1_0/{sample}/0/*.parquet\"\n",
     "\n",
-    "full_load_path = f\"/depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/{sample}/0/*.parquet\"\n",
+    "# full_load_path = f\"/depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/{sample}/0/*.parquet\"\n",
+    "full_load_path = f\"/depot/cms/users/yun79/results/stage1/test_full_oldPRNG/2018/f1_0/{sample}/0/*.parquet\"\n",
+    "\n",
+    "\n",
     "# full_load_path = f\"/depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/{sample}/*/*.parquet\"\n",
     "# full_load_path = f\"/depot/cms/users/yun79/results/stage1/test_validation_bigV2_19April2024/2018/f1_0/{sample}/*/*.parquet\"\n",
     "# full_load_path = f\"/depot/cms/users/yun79/results/stage1/test_fullVsRun3/2018/f1_0/{sample}/0/*.parquet\"\n",
@@ -48,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "40f03c35-2e54-4d7b-9e6f-f4a2382596af",
    "metadata": {
     "scrolled": true
@@ -60,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "3ee6a99e-831e-4e21-bd04-7a22cef4d9b4",
    "metadata": {
     "scrolled": true
@@ -72,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "85a7af5a-ff70-4fa9-86de-03b2f48d853c",
    "metadata": {},
    "outputs": [],
@@ -93,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "28ef09fe-19ff-420f-a53f-c1b586a2b853",
    "metadata": {},
    "outputs": [
@@ -170,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "e18665aa-4659-4ca2-afac-f3912093c4d1",
    "metadata": {},
    "outputs": [],
@@ -185,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "6680dea8-582c-447a-871e-13091c4c786b",
    "metadata": {
     "scrolled": true
@@ -492,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "47661fb9-4613-4840-ba7e-4efbe0ff2baf",
    "metadata": {
     "scrolled": true
