discarded make parameters as that's now relegated to yaml files

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -14,29 +14,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00cb7be6-e877-4fca-a691-b1f57ee591b0",
-   "metadata": {},
-   "source": [
-    "# Pre-stage\n",
-    "We run ```make_parameters.py``` while specifying the year with ```--year``` flag. The output of the python script will be saved in ```./config/parameters.json```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a4b698a-d859-4a4d-86ec-ebffb387cec6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! python make_parameters.py --year 2018"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "28d19ab0-1f67-4a82-bb57-7aeba184795b",
    "metadata": {},
    "source": [
-    "Now we prepare the list of samples that we will be performing our analysis on. This can be done by executing ```run_prestage.py``` script, specifying the chunksize by using ```--chunksize``` flag and listing the samples we would like to perform our analysis on with ```--input_string``` flag."
+    "# Pre-stage\n",
+    "Before we \"run\" our analysis, we prepare the list of samples that we will be performing our analysis on. This can be done by executing ```run_prestage.py``` script, specifying the chunksize by using ```--chunksize``` flag and listing the samples we would like to perform our analysis on with ```--input_string``` flag."
    ]
   },
   {
@@ -59,7 +41,7 @@
     "data_l = ['A', 'B', 'C', 'D']\n",
     "bkg_l = ['DY', 'TT',]\n",
     "sig_l = ['ggH', 'VBF']\n",
-    "! python run_prestage.py --chunksize 80000 --year 2018 --cluster True --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)}"
+    "! python run_prestage.py --chunksize 100000 --year 2018 --cluster True --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)}"
    ]
   },
   {
@@ -109,7 +91,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! python -W ignore run_stage1.py --save_path \"/depot/cms/users/yun79/results/stage1/test/\""
+    "year = 2018\n",
+    "save_path = \"/depot/cms/users/yun79/results/stage1/test/\"\n",
+    "! python -W ignore run_stage1.py -y {year} --save_path {save_path}"
    ]
   },
   {
@@ -144,264 +128,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 1,
    "id": "3506c3fc-ce59-4558-a715-ddbf6208a509",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data_l = ['A', 'B', 'C', 'D']\n",
-    "data_l = ['A',  'B', 'C']\n",
-    "bkg_l = ['DY','TT',]\n",
+    "data_l = ['A', 'B', 'C', 'D']\n",
+    "bkg_l = ['DY','TT','ST','VV','EWK']\n",
     "sig_l = ['ggH', 'VBF']\n",
-    "# vars2plot = ['jet', 'mu', 'dimuon'] \n",
-    "vars2plot = ['jet'] \n",
+    "vars2plot = ['jet', 'mu', 'dimuon', 'dijet'] \n",
     "lumi = 137.9\n",
-    "status = \"Private_Work\""
+    "status = \"Private_Work\"\n",
+    "year = 2018"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "5cd72782-62c0-4ecc-a8d2-fbc219ed7118",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "variables2plot: ['jet1_pt', 'jet2_pt', 'jet1_eta', 'jet2_eta', 'jet1_phi', 'jet2_phi']\n",
-      "process: data_A\n",
-      "fraction_weight: 1000.0009602331048\n",
-      "data activated\n",
-      "process: data_B\n",
-      "fraction_weight: 1000.0001417635383\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
-      "process: data_C\n",
-      "fraction_weight: 1000.0000818285964\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
-      "process: dy_M-50\n",
-      "fraction_weight: 1000.0041430105877\n",
-      "process: dy_M-100To200\n",
-      "fraction_weight: 1000.0043496895032\n",
-      "DY activated\n",
-      "process: ttjets_dl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "process: ttjets_sl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_pt_hist_Top (Potential memory leak).\n",
-      "process: ggh_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "ggH activated\n",
-      "process: vbf_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "VBF activated\n",
-      "ratio activated\n",
-      "Name: num_hist Title: jet1_pt NbinsX: 29\n",
-      "Name: jet1_pt_hist_DY Title: jet1_pt NbinsX: 29\n",
-      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet1_pt.pdf has been created\n",
-      "process: data_A\n",
-      "fraction_weight: 1000.0009602331048\n",
-      "data activated\n",
-      "process: data_B\n",
-      "fraction_weight: 1000.0001417635383\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_pt_hist_data (Potential memory leak).\n",
-      "process: data_C\n",
-      "fraction_weight: 1000.0000818285964\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_pt_hist_data (Potential memory leak).\n",
-      "process: dy_M-50\n",
-      "fraction_weight: 1000.0041430105877\n",
-      "process: dy_M-100To200\n",
-      "fraction_weight: 1000.0043496895032\n",
-      "DY activated\n",
-      "process: ttjets_dl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "process: ttjets_sl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_pt_hist_Top (Potential memory leak).\n",
-      "process: ggh_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "ggH activated\n",
-      "process: vbf_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "VBF activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: dummy_hist (Potential memory leak).\n",
-      "ratio activated\n",
-      "Name: num_hist Title: jet2_pt NbinsX: 29\n",
-      "Name: jet2_pt_hist_DY Title: jet2_pt NbinsX: 29\n",
-      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet2_pt.pdf has been created\n",
-      "process: data_A\n",
-      "fraction_weight: 1000.0009602331048\n",
-      "data activated\n",
-      "process: data_B\n",
-      "fraction_weight: 1000.0001417635383\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_data (Potential memory leak).\n",
-      "process: data_C\n",
-      "fraction_weight: 1000.0000818285964\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_data (Potential memory leak).\n",
-      "process: dy_M-50\n",
-      "fraction_weight: 1000.0041430105877\n",
-      "process: dy_M-100To200\n",
-      "fraction_weight: 1000.0043496895032\n",
-      "DY activated\n",
-      "process: ttjets_dl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "process: ttjets_sl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_Top (Potential memory leak).\n",
-      "process: ggh_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "ggH activated\n",
-      "process: vbf_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "VBF activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: dummy_hist (Potential memory leak).\n",
-      "ratio activated\n",
-      "Name: num_hist Title: jet1_eta NbinsX: 29\n",
-      "Name: jet1_eta_hist_DY Title: jet1_eta NbinsX: 29\n",
-      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet1_eta.pdf has been created\n",
-      "process: data_A\n",
-      "fraction_weight: 1000.0009602331048\n",
-      "data activated\n",
-      "process: data_B\n",
-      "fraction_weight: 1000.0001417635383\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_data (Potential memory leak).\n",
-      "process: data_C\n",
-      "fraction_weight: 1000.0000818285964\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_data (Potential memory leak).\n",
-      "process: dy_M-50\n",
-      "fraction_weight: 1000.0041430105877\n",
-      "process: dy_M-100To200\n",
-      "fraction_weight: 1000.0043496895032\n",
-      "DY activated\n",
-      "process: ttjets_dl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "process: ttjets_sl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_Top (Potential memory leak).\n",
-      "process: ggh_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "ggH activated\n",
-      "process: vbf_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "VBF activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: dummy_hist (Potential memory leak).\n",
-      "ratio activated\n",
-      "Name: num_hist Title: jet2_eta NbinsX: 29\n",
-      "Name: jet2_eta_hist_DY Title: jet2_eta NbinsX: 29\n",
-      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet2_eta.pdf has been created\n",
-      "process: data_A\n",
-      "fraction_weight: 1000.0009602331048\n",
-      "data activated\n",
-      "process: data_B\n",
-      "fraction_weight: 1000.0001417635383\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_phi_hist_data (Potential memory leak).\n",
-      "process: data_C\n",
-      "fraction_weight: 1000.0000818285964\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_phi_hist_data (Potential memory leak).\n",
-      "process: dy_M-50\n",
-      "fraction_weight: 1000.0041430105877\n",
-      "process: dy_M-100To200\n",
-      "fraction_weight: 1000.0043496895032\n",
-      "DY activated\n",
-      "process: ttjets_dl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "process: ttjets_sl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_phi_hist_Top (Potential memory leak).\n",
-      "process: ggh_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "ggH activated\n",
-      "process: vbf_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "VBF activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: dummy_hist (Potential memory leak).\n",
-      "ratio activated\n",
-      "Name: num_hist Title: jet1_phi NbinsX: 29\n",
-      "Name: jet1_phi_hist_DY Title: jet1_phi NbinsX: 29\n",
-      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet1_phi.pdf has been created\n",
-      "process: data_A\n",
-      "fraction_weight: 1000.0009602331048\n",
-      "data activated\n",
-      "process: data_B\n",
-      "fraction_weight: 1000.0001417635383\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_phi_hist_data (Potential memory leak).\n",
-      "process: data_C\n",
-      "fraction_weight: 1000.0000818285964\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_phi_hist_data (Potential memory leak).\n",
-      "process: dy_M-50\n",
-      "fraction_weight: 1000.0041430105877\n",
-      "process: dy_M-100To200\n",
-      "fraction_weight: 1000.0043496895032\n",
-      "DY activated\n",
-      "process: ttjets_dl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "process: ttjets_sl\n",
-      "fraction_weight: 1000.0\n",
-      "top activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_phi_hist_Top (Potential memory leak).\n",
-      "process: ggh_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "ggH activated\n",
-      "process: vbf_powheg\n",
-      "fraction_weight: 1000.0\n",
-      "VBF activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: dummy_hist (Potential memory leak).\n",
-      "ratio activated\n",
-      "Name: num_hist Title: jet2_phi NbinsX: 29\n",
-      "Name: jet2_phi_hist_DY Title: jet2_phi NbinsX: 29\n",
-      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet2_phi.pdf has been created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# fraction = 0.1\n",
-    "fraction = 0.001\n",
+    "fraction = 1.0\n",
     "fraction_str = str(fraction).replace('.', '_')\n",
-    "load_path = f\"/depot/cms/users/yun79/results/stage1/test_full3/f{fraction_str}\"\n",
-    "# ! python validation_plotter_ROOT.py --load_path {load_path} --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)} --lumi 137.9 \n",
-    "# ! python validation_plotter_unified.py --load_path {load_path} --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)} --lumi 137.9 --status {status} --no_ratio\n",
-    "! python validation_plotter_unified.py --load_path {load_path} --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)} --lumi 137.9 --status {status}  --ROOT_style   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "a8f63e91-910f-4d98-83aa-c6acb8e22ae6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dy_M-100To200  dy_M-50\tggh_powheg  ttjets_dl  ttjets_sl  vbf_powheg\n"
-     ]
-    }
-   ],
-   "source": [
-    "! ls /depot/cms/users/yun79/results/stage1/test_full/f0_001/"
+    "load_path = f\"/depot/cms/users/yun79/results/stage1/test_full3/{year}/f{fraction_str}\"\n",
+    "! python validation_plotter_unified.py -y {year} --load_path {load_path}  -var {' '.join(vars2plot)} --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)} --lumi 137.9 --status {status} --ROOT_style    "
    ]
   },
   {
