adding in roospline test, they're identical

--- a/quick_tests/quickFEWZ_test.ipynb
+++ b/quick_tests/quickFEWZ_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "779615dc-7a8c-4486-a96c-ac24345df341",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "c3391973-0de3-4f4f-bff4-aa8d0c68c3ed",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "920bf3a5-6b86-4f94-a535-a92b471045c1",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "0669e6ea-090f-48c0-a33d-5f971da7fdd4",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "bef053d7-6dfc-48e9-be72-249a4d01d547",
    "metadata": {},
    "outputs": [
@@ -154,8 +154,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "609aa659-cc7d-48de-b597-053fcd23b17e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning in <TCanvas::Constructor>: Deleting canvas with same name: Canvas\n",
+      "Info in <TCanvas::Print>: pdf file ./quick_plots/quickFEWZ_SplineTest.pdf has been created\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's do a roospline on this\n",
+    "histo_l = [\n",
+    "    FEWZ_histo_36fb,\n",
+    "    FEWZ_histo_full_xsec,\n",
+    "    FEWZ_histo_full_shape,\n",
+    "]\n",
+    "name = \"Canvas\"\n",
+    "canvas = rt.TCanvas(name,name,800, 800)\n",
+    "x = rt.RooRealVar(\"x\", \"x\", 110, 150)\n",
+    "frame = x.frame()\n",
+    "legend = rt.TLegend(0.65,0.55,0.9,0.7)\n",
+    "color_map = {\n",
+    "    \"full_36fb\" : rt.kBlue,\n",
+    "    \"full_xsec\" : rt.kGreen,\n",
+    "    \"full_shape\" : rt.kRed,\n",
+    "}\n",
+    "\n",
+    "for histo in histo_l:\n",
+    "    x_vals, y_vals = getFEWZ_vals(histo)\n",
+    "    y_vals = y_vals / np.sum(y_vals)\n",
+    "    x_arr_vec = rt.vector(\"double\")(x_vals)\n",
+    "    y_arr_vec = rt.vector(\"double\")(y_vals)\n",
+    "    name = histo.GetName()\n",
+    "    roo_spline = rt.RooSpline(name, name, x, x_arr_vec, y_arr_vec)\n",
+    "    roo_spline.plotOn(frame, LineColor=color_map[name])\n",
+    "    legend.AddEntry(name,name, \"L\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "frame.Draw()\n",
+    "legend.Draw()\n",
+    "canvas.Update()\n",
+    "canvas.Draw()\n",
+    "canvas.SaveAs(f\"./quick_plots/quickFEWZ_SplineTest.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23f4beb6-7b31-4166-8d3e-8bdec7f5e9dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8c959d3-53c7-4fd2-8e31-c004fef7dee0",
    "metadata": {},
    "outputs": [],
    "source": []
