Got the FEWZ Roospline and dy mass to work

--- a/quick_tests/quickFEWZ_test.ipynb
+++ b/quick_tests/quickFEWZ_test.ipynb
@@ -207,16 +207,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "23f4beb6-7b31-4166-8d3e-8bdec7f5e9dd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "color_map = {\n",
+    "    \"full_36fb\" : rt.kBlue,\n",
+    "    \"full_xsec\" : rt.kGreen,\n",
+    "    \"full_shape\" : rt.kRed,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "a8c959d3-53c7-4fd2-8e31-c004fef7dee0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "roo_histDyMC_normalized.sumEntries() : 1.0000000027939677\n",
+      "x_vals.shape: (42,)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning in <TCanvas::Constructor>: Deleting canvas with same name: Canvas\n",
+      "Warning in <TFile::Append>: Replacing existing TH1: DyMC_hist__DY_dimuon_mass (Potential memory leak).\n",
+      "Info in <TCanvas::Print>: pdf file ./quick_plots/stage3_plot_dy_ggH0.pdf has been created\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now we compare the core Roospline to the DY background \n",
+    "import awkward as ak\n",
+    "import dask_awkward as dak\n",
+    "import numpy as np\n",
+    "import ROOT as rt\n",
+    "\n",
+    "load_path = \"/work/users/yun79/stage2_output/test/processed_events_dyMC.parquet\"\n",
+    "processed_eventsSignalMC = ak.from_parquet(load_path)\n",
+    "name = \"Canvas\"\n",
+    "canvas = rt.TCanvas(name,name,800, 800) # giving a specific name for each canvas prevents segfault?\n",
+    "# canvas = rt.TCanvas(name,name,400, 800) # giving a specific name for each canvas prevents segfault?\n",
+    "\n",
+    "canvas.cd()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# the mass range and nbins are taken from Fig 6.15 of the long AN (page 57)\n",
+    "mass_name = \"DY_dimuon_mass\"\n",
+    "massDyMC =  rt.RooRealVar(mass_name,mass_name,125,110,150) # h peak range\n",
+    "nbins = 42\n",
+    "massDyMC.setBins(nbins)\n",
+    "# clear canvas to plot the signal model\n",
+    "canvas.Clear()\n",
+    "frame = massDyMC.frame()\n",
+    "legend = rt.TLegend(0.65,0.55,0.9,0.7)\n",
+    "color_map = {\n",
+    "    0 : rt.kBlue,\n",
+    "    1 : rt.kGreen+2,\n",
+    "    2 : rt.kRed,\n",
+    "    3 : rt.kYellow,\n",
+    "}\n",
+    "\n",
+    "for cat_ix in range(1):\n",
+    "# cat_ix = 0\n",
+    "    subCat_filter = (processed_eventsSignalMC[\"subCategory_idx\"] == cat_ix)\n",
+    "    subCat_mass_arrDyMC = processed_eventsSignalMC.dimuon_mass[subCat_filter]\n",
+    "    subCat_mass_arrDyMC  = ak.to_numpy(subCat_mass_arrDyMC) # convert to numpy for rt.RooDataSet\n",
+    "    \n",
+    "    roo_datasetDyMC = rt.RooDataSet.from_numpy({mass_name: subCat_mass_arrDyMC}, [massDyMC])\n",
+    "    roo_datasetDyMC.SetName(f\"ggH PowHeg MC subCat {cat_ix}\")\n",
+    "    roo_histDyMC = rt.RooDataHist(\"DyMC_hist\",f\"binned version of DyMC of subcat {cat_ix}\", rt.RooArgSet(massDyMC), roo_datasetDyMC)  # copies binning from mass variable\n",
+    "    # normalize roo_histDyMC\n",
+    "    THist = roo_histDyMC.createHistogram(mass_name)\n",
+    "    # THist.Scale(1/roo_histSigMC.sumEntries()) # scale to make intgral equal to one\n",
+    "    THist.Scale(1/THist.Integral())\n",
+    "    roo_histDyMC_normalized = rt.RooDataHist(\"DyMC_hist_normalized\",f\"binned version of DyMC of subcat {cat_ix}\", rt.RooArgSet(massDyMC), THist) # turn it back to RooDataHist for plotOn to work\n",
+    "    \n",
+    "    print(f\"roo_histDyMC_normalized.sumEntries() : {roo_histDyMC_normalized.sumEntries()}\")\n",
+    "    roo_histDyMC_normalized.plotOn(frame, DataError=\"SumW2\", Name=roo_datasetDyMC.GetName(),MarkerColor=color_map[cat_ix])\n",
+    "    \n",
+    "    name=roo_histDyMC_normalized.GetName()\n",
+    "    legend.AddEntry(name,\"test\", \"P\")\n",
+    "\n",
+    "# add in roospline\n",
+    "x_vals, y_vals = getFEWZ_vals(FEWZ_histo_36fb)\n",
+    "print(f\"x_vals.shape: {x_vals.shape}\")\n",
+    "y_vals = y_vals / np.sum(y_vals)\n",
+    "x_arr_vec = rt.vector(\"double\")(x_vals)\n",
+    "y_arr_vec = rt.vector(\"double\")(y_vals)\n",
+    "name = histo.GetName()\n",
+    "roo_spline = rt.RooSpline(name, name, massDyMC, x_arr_vec, y_arr_vec)\n",
+    "\n",
+    "\n",
+    "roo_spline.plotOn(frame, LineColor=rt.kGreen)\n",
+    "frame.Draw()\n",
+    "\n",
+    "# legend\n",
+    "name = roo_spline.GetName()\n",
+    "legend.AddEntry(name,name, \"L\")\n",
+    "legend.Draw()\n",
+    "\n",
+    "canvas.Update()\n",
+    "canvas.Draw()\n",
+    "\n",
+    "canvas.SaveAs(f\"./quick_plots/stage3_plot_dy_ggH{cat_ix}.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "c7da4ac9-ea1c-4900-8ef7-de3292eaf20c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataStore DyMC_hist_normalized (binned version of DyMC of subcat 0)\n",
+      "  Contains 42 entries\n",
+      "  Observables: \n",
+      "    1)  DY_dimuon_mass = 149.524  L(110 - 150) B(42)  \"DY_dimuon_mass\"\n",
+      "Binned Dataset DyMC_hist_normalized (binned version of DyMC of subcat 0)\n",
+      "  Contains 42 bins with a total weight of 1\n",
+      "  Observables:     1)  DY_dimuon_mass = 149.524  L(110 - 150) B(42)  \"DY_dimuon_mass\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "roo_histDyMC_normalized.Print(\"v\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "d3ce0828-8fa0-42aa-813a-af699680a93c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0000000027939677"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_wgt = 0\n",
+    "for ix in range(42):\n",
+    "    wgt = roo_histDyMC_normalized.weight(ix)\n",
+    "    total_wgt += wgt\n",
+    "    binCentre = roo_histDyMC_normalized.get(ix)[\"DY_dimuon_mass\"].getVal()\n",
+    "total_wgt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "5869d79f-ea33-4c2c-ba93-c091fd7b845c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roo_histDyMC_normalized.weight(48)\n",
+    "binCentre = roo_histDyMC_normalized.get(41)[\"DY_dimuon_mass\"].getVal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "28cb76c7-1d48-4224-83d8-b44551e25252",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "149.52380952380952"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binCentre"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8c959d3-53c7-4fd2-8e31-c004fef7dee0",
+   "id": "d61d4d2e-2643-4091-9083-dfec6c436836",
    "metadata": {},
    "outputs": [],
    "source": []
